[gd_scene load_steps=10 format=2]

[ext_resource path="res://Paddle.tscn" type="PackedScene" id=1]
[ext_resource path="res://CentralDivider.gd" type="Script" id=2]
[ext_resource path="res://Net.gd" type="Script" id=3]
[ext_resource path="res://Ball.gd" type="Script" id=4]
[ext_resource path="res://Walls.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24.855, 200 )

[sub_resource type="CircleShape2D" id=2]
radius = 50.0

[sub_resource type="SegmentShape2D" id=3]
b = Vector2( 0, 1000 )

[sub_resource type="SegmentShape2D" id=4]
b = Vector2( 2000, 0 )

[node name="Main" type="Node2D"]

[node name="LeftPaddle" parent="." instance=ExtResource( 1 )]
position = Vector2( 67.6157, 461.562 )
rotation = -0.785398
color = Color( 0.94902, 0.933333, 0.854902, 1 )

[node name="RightPaddle" parent="." instance=ExtResource( 1 )]
position = Vector2( 1934.88, 501.125 )
rotation = 0.785398
color = Color( 0.941176, 0.431373, 0.592157, 1 )
on_left = false

[node name="Net" type="StaticBody2D" parent="." groups=[
"net",
]]
position = Vector2( 1000, 800 )
script = ExtResource( 3 )
size = Vector2( 49.71, 400 )
color = Color( 0.760784, 0.752941, 0.701961, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Net"]
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="Net"]
margin_left = -24.855
margin_top = -200.0
margin_right = 24.855
margin_bottom = 200.0
color = Color( 0.760784, 0.752941, 0.701961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ball" type="KinematicBody2D" parent="." groups=[
"balls",
]]
position = Vector2( 1000, 250 )
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CentralDivider" type="Control" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_right = 200.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
color = Color( 0.337255, 0.619608, 0.678431, 1 )

[node name="Walls" type="StaticBody2D" parent="."]
script = ExtResource( 5 )

[node name="LeftWall" type="CollisionShape2D" parent="Walls"]
shape = SubResource( 3 )

[node name="RightWall" type="CollisionShape2D" parent="Walls"]
position = Vector2( 2000, 0 )
shape = SubResource( 3 )

[node name="TopWall" type="CollisionShape2D" parent="Walls"]
shape = SubResource( 4 )

[node name="BottomWall" type="CollisionShape2D" parent="Walls"]
position = Vector2( 0, 1000 )
shape = SubResource( 4 )
